# proc-macro-workshop

./: .gitignore  Cargo.toml  README.md  main.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 02-create-builder.rs
customer_model/: Cargo.toml
customer_model/src/: lib.rs
customer_model/src/impl/: default_new_impl.rs  field_counter_impl.rs  getters_impl.rs  mod.rs
debug/: .gitignore  Cargo.toml
debug/src/: custom_debug.rs  lib.rs
seq/: Cargo.toml
seq/src/: lib.rs  seq_impl.rs  seq_impl2.rs
