[package]
name = "seq"
version = "0.1.0"
edition = "2024"


[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
proc-macro-hack = "0.5.20+deprecated"
seq = "0.5.0"